[build-system]
requires = ["setuptools>=61.0","wheel","setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "env-loader-pro"
version = "0.2.0"
description = "A typed, validated, and secure environment loader for Python projects with automatic type casting, validation, secret masking, and schema support."
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "Shanen Thomas", email = "shanen.j.thomas@gmail.com" } ]
license = { text = "Apache-2.0" }
urls = { Homepage = "https://github.com/shanen28/env-loader-pro", Documentation = "https://github.com/shanen28/env-loader-pro#readme" }
keywords = ["env","dotenv","config","loader","validation","environment","variables","typed","pydantic","dataclass"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

[project.scripts]
envloader = "env_loader_pro.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = ["pytest"]
pydantic = ["pydantic>=1.8.0"]
yaml = ["pyyaml>=5.4.0"]
all = ["pydantic>=1.8.0", "pyyaml>=5.4.0", "pytest"]

