[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "env-loader-pro"
version = "1.0.1"
description = "A typed, validated, and secure environment loader for Python projects with automatic type casting, validation, secret masking, and schema support."
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "Shanen Thomas", email = "shanen.j.thomas@gmail.com" } ]
license = "Apache-2.0"
urls = { Homepage = "https://github.com/shanen28/env-loader-pro", Documentation = "https://shanen28.github.io/env-loader-pro/", Repository = "https://github.com/shanen28/env-loader-pro", "Bug Tracker" = "https://github.com/shanen28/env-loader-pro/issues" }
keywords = ["env","dotenv","config","loader","validation","environment","variables","typed","pydantic","dataclass"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

[project.scripts]
envloader = "env_loader_pro.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = ["pytest"]
pydantic = ["pydantic>=1.8.0"]
yaml = ["pyyaml>=5.4.0"]
azure = ["azure-identity>=1.12.0", "azure-keyvault-secrets>=4.6.0"]
aws = ["boto3>=1.26.0"]
fastapi = ["fastapi>=0.68.0"]
watch = ["watchdog>=2.1.0"]
all = [
    "pydantic>=1.8.0",
    "pyyaml>=5.4.0",
    "pytest",
    "azure-identity>=1.12.0",
    "azure-keyvault-secrets>=4.6.0",
    "boto3>=1.26.0",
    "fastapi>=0.68.0",
    "watchdog>=2.1.0",
]









